--- a/react_app/assets/explore.html
+++ b/react_app/assets/explore.html
@@ -39,7 +39,8 @@
 <div style="padding-left: 10%;padding-right: 10%;">
     <div class="tpl-page-container tpl-page-header-fixed">
 
-        <div class="tpl-left-nav tpl-left-nav-hover">
+        <div id="user"></div>
+        <!--div class="tpl-left-nav tpl-left-nav-hover">
             <div class="tpl-left-nav-title">
                 相关用户
                 <a class="i-load-more-item-shadow" href="#"><i class="am-icon-refresh am-icon-fw"></i>更多</a>
@@ -61,7 +62,7 @@
                     </li>
                 </ul>
             </div>
-        </div>
+        </div-->
 
 
         <div class="tpl-content-wrapper">
