--- a/react_app/assets/book.html
+++ b/react_app/assets/book.html
@@ -14,14 +14,18 @@
 
 </head>
 
-<body>
+<body style="background: #e9ecf3 ;">
 
 <header class="am-topbar am-topbar-fixed-top">
     <div id="header"></div>
 </header>
 
 
+<div style="padding-left: 10%;padding-right: 10%;">
+    <div class="tpl-page-container tpl-page-header-fixed" >
 <div id="root"></div>
+    </div>
+</div>
 
 </body>
 
