--- a/react_app/assets/settings.html
+++ b/react_app/assets/settings.html
@@ -14,7 +14,7 @@
 
 </head>
 
-<body>
+<body style="background: #e9ecf3 ;">
 
 <header class="am-topbar am-topbar-fixed-top">
     <div id="header"></div>
