update login page

--- a/react_app/assets/settings.html
+++ b/react_app/assets/settings.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width">
-    <title>Mine</title>
+    <title>漂流书单 - 个人资料</title>
     <link rel="stylesheet" href="/static/react/css/amazeui.min.css"/>
     <link rel="stylesheet" href="/static/react/css/index.css">
     <link rel="stylesheet" href="/static/react/css/settings.css">
