--- a/react_app/assets/friends.html
+++ b/react_app/assets/friends.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width">
-  <title>Friends</title>
+  <title>漂流书单-朋友</title>
   <link rel="stylesheet" href="/static/react/css/amazeui.min.css"/>
   <link rel="stylesheet" href="/static/react/css/index.css">
   <link rel="stylesheet" href="/static/react/css/friends.css">
