--- a/react_app/assets/login.html
+++ b/react_app/assets/login.html
@@ -23,7 +23,7 @@
         .header h1 {
             font-size: 200%;
             color: #78798d;
-            margin-top: 30px;
+            margin-top: 0px;
         }
 
         .header p {
@@ -117,6 +117,11 @@
                                 <div class="am-form-group" id="input_username">
                                     <label for="account">User Name</label>
                                     <input type="text" id="account" name="account" minlength="3" placeholder="请输入3位以上用户名"
+                                           class="am-form-field" required/>
+                                </div>
+                                <div class="am-form-group" id="input_username">
+                                    <label for="name">昵称</label>
+                                    <input type="text" id="name" name="name" placeholder="请输入昵称"
                                            class="am-form-field" required/>
                                 </div>
                                 <div class="am-form-group">
